# tempserver_rmt_cpp

./: .gitignore  CMakeLists.txt  OneWireSensor.cpp  OneWireSensor.h  README.md  TalkToServer.cpp  TalkToServer.h  cl_parser.cpp  dbFunctions.h  main.cpp  makefile  read_temp.cpp  update_status.cpp
lib/: CommandLineParser.cpp  CommandLineParser.h  GetBoardStatus.cpp  GetBoardStatus.h  OneWireSensor.cpp  OneWireSensor.h  RemoteMainDB.cpp  RemoteMainDB.h  RemoteStatusDB.cpp  RemoteStatusDB.h  RemoteTempDB.cpp  RemoteTempDB.h  SendStatusToServer.cpp  SendStatusToServer.h  SendTempToServer.cpp  SendTempToServer.h  TalkToServer.cpp  TalkToServer.h  cl_parser.cpp  cl_parser.h  dbFunctions.cpp  dbFunctions.h  messages_eng.h  pch.h  pch.h.old  read_rpi_board.cpp  read_rpi_board.h  structs.h
lib/command_line_parser/: CommandLineParser.cpp  CommandLineParser.h
lib/database/: RemoteMainDB.cpp  RemoteMainDB.h  RemoteStatusDB.cpp  RemoteStatusDB.h  RemoteTempDB.cpp  RemoteTempDB.h  dbFunctions.cpp  dbFunctions.h
lib/get_board_status/: GetBoardStatus.cpp  GetBoardStatus.h
lib/one_wire_sensor/: OneWireSensor.cpp  OneWireSensor.h
lib/read_rpi_board/: read_rpi_board.cpp  read_rpi_board.h
lib/server_communication/: SendStatusToServer.cpp  SendStatusToServer.h  SendTempToServer.cpp  SendTempToServer.h  TalkToServer.cpp  TalkToServer.h
